1.1.8 
* MostPopular works for all implementations, except flat files
* Flat file database support; it's not yet complete but the basic Wiki
  functionality is there, thanks to Ari
* New zip file format for page dumps follows standard email format
* Removed tabs from all default pages
* Added whitespace padding to pages after they are serialized and
  written to the DBM file; this goes a long way towards fixing the
  memory leak problems for DBM-based Wikis.
* Numerous bug fixes, as always
* Some refactoring of the database interface
* 

1.1.7 07/15/00: A lot was added since the 1.1.6b release. Diffs are
    the handiwork of Jeff Dairiki, though Arno wrote the second
    revision. Features and changes include:

* Page diffs, with color
* "MostPopular" page added which dynamically tracks most viewed pages
  (MySQL only so far)
* Admin functions: page dumps, page loads, Zip dumps, page locking
* MySQL, DBM, mSQL and Postgresql support all functional and appear stable
* Full HTML compliance in page output
* Tabless markup language introduced for <UL> and <OL>
* Fixed raw HTML exploit in [info] page
* Perl script included to reduce the size of a DBM file
* documentation updates
* page source updates
* gazillion feature enhancements and bug fixes, no doubt necessitating
  another gazillion feature enhancements and bug fixes ;-)

1.1.6b 06/27/00: The wrong wiki_config.php3 file was included in 1.1.6, 
and this release corrects that; also in my hurry, I included all the CVS
directories and files, and a test file. That stuff was left out.

1.1.6 06/26/00: Added templates, Postgresql support, mSQL support, new
database schema, new date storage format, an "info" link on all pages,
and introduced some new bugs (RecentChanges is broken ;-)

1.1.5 06/08/00: Here are the comments from the CVS logs:

fixed magic_quotes_gpc=1 bug for $pagename
fixed raw-HTML exploit for $pagename
fixed javascript: links exploit
Concurrent editing of pages is detected now - fixes LostUpdateProblem